samples/_failures_safe/1761343176_b0d60b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef54302c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_ef54302c.c:181:20: error: missing terminating " character
  181 |             printf("Vertex %d
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_ef54302c.c:181:13: error: expected expression at end of input
  181 |             printf("Vertex %d
      |             ^~~~~~
./samples/SAFE/__tmp_ef54302c.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef54302c.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ef54302c.c:181:13: error: expected declaration or statement at end of input
